# ctypes_cpp_python_mingw

./: .gitignore  CMakeLists.txt  README.md
python_test/: test.py
scripts/: windows_g++.sh
src/: test.cpp  test.h
